--- a/src/components/BusinessOrderCannel/BusinessOrderCannel.html
+++ b/src/components/BusinessOrderCannel/BusinessOrderCannel.html
@@ -22,11 +22,11 @@
 				<div class="business_order_table_tr flex-center text_dark" v-else v-for="(item,index) in pageList" :key="index">
 <!--					<div class="order">{{item.id}}</div>-->
 					<div class="type" >&nbsp;{{item.id}}</div>
-          <div class="orderstatus" :class="item.postersType === 'BUY_ORDER' ? 'text_green' : 'text_red'">{{item.postersType === 'BUY_ORDER' ? '购买' : '出售'}}</div>
-          <div class="price" :class="item.postersType === 'BUY_ORDER' ? 'text_green' : 'text_green'">{{toFixed(item.price,2)}}</div>
+          <div class="orderstatus" :class="item.postersType === 'BUY' ? 'text_green' : 'text_red'">{{item.postersType === 'BUY' ? '购买' : '出售'}}</div>
+          <div class="price" :class="item.postersType === 'BUY' ? 'text_green' : 'text_green'">{{toFixed(item.price,2)}}</div>
 					<div class="amount">{{toFixed(item.total,2)}}</div>
 					<div class="money">{{toFixed(accMul(item.total,item.price),2)}}</div>
-<!--					<div class="clock">{{item.postersType === 'BUY_ORDER'?'0.00':toFixed(item.locking,2)}}</div>-->
+<!--					<div class="clock">{{item.postersType === 'BUY'?'0.00':toFixed(item.locking,2)}}</div>-->
           <div class="jyobject"></div>
 <!--					<div class="complete">{{toFixed(item.deal,2)}}</div>-->
 <!--					<div class="create">{{formatDateUitl(item.createdAt)}}</div>-->
