--- a/src/components/BusinessOrderComplete/BusinessOrderComplete.html
+++ b/src/components/BusinessOrderComplete/BusinessOrderComplete.html
@@ -22,8 +22,8 @@
 				<div class="business_order_table_tr flex-center text_dark" v-else v-for="(item,index) in pageList" :key="index">
 <!--					<div class="order">{{item.id}}</div>-->
 					<div class="type" >{{item.id}}</div>
-          <div class="orderstatus" :class="item.postersType === 'BUY_ORDER' ? 'text_green' : 'text_red'">{{item.postersType === 'BUY_ORDER' ? '购买' : '出售'}}</div> 
-          <div class="price" :class="item.postersType === 'BUY_ORDER' ? 'text_green' : 'text_green'">{{toFixed(item.price,2)}}</div>
+          <div class="orderstatus" :class="item.postersType === 'BUY' ? 'text_green' : 'text_red'">{{item.postersType === 'BUY' ? '购买' : '出售'}}</div>
+          <div class="price" :class="item.postersType === 'BUY' ? 'text_green' : 'text_green'">{{toFixed(item.price,2)}}</div>
 					<div class="amount">{{toFixed(item.deal,2)}}</div>
 					<div class="money">{{toFixed(accMul(item.total,item.price),2)}}</div>
 <!--					<div class="num">{{toFixed(accMul(item.minLimit,item.price),2)}} - {{toFixed(accMul(item.total,item.price),2)}}</div>-->
