--- a/src/components/BusinessOrderConduct/BusinessOrderConduct.html
+++ b/src/components/BusinessOrderConduct/BusinessOrderConduct.html
@@ -81,7 +81,7 @@
           <div class="submit-buy-item">
             <div class="submit-buy-item-left text_grey_8 strong">价格：</div>
             <div class="submit-buy-item-right border_radius submit-buy-item-right-border">
-              <span class="margin_right" :class="itemContainer.postersType==='SELL_ORDER'?'text_red':'text_green'">{{toFixed(itemContainer.price,2)}}</span>
+              <span class="margin_right" :class="itemContainer.postersType==='SELL'?'text_red':'text_green'">{{toFixed(itemContainer.price,2)}}</span>
               <span class="text_absolute text_grey_8">CNY</span>
             </div>
           </div>
@@ -97,7 +97,7 @@
           <div class="submit-buy-item margin_top">
             <div class="submit-buy-item-left text_grey_8 strong">金额：</div>
             <div class="submit-buy-item-right border_radius submit-buy-item-right-border">
-              <span class="margin_right" :class="itemContainer.postersType==='SELL_ORDER'?'text_red':'text_green'">{{toFixed(accMul(itemContainer.amount,itemContainer.price),2)}}</span>
+              <span class="margin_right" :class="itemContainer.postersType==='SELL'?'text_red':'text_green'">{{toFixed(accMul(itemContainer.amount,itemContainer.price),2)}}</span>
               <span class="text_absolute text_grey_8">CNY</span>
             </div>
           </div>
@@ -150,9 +150,9 @@
 <!--          </div>-->
         </div>
         <div class="submit-btn-box">
-          <div class="submit-btn border_radius" :class="itemContainer.postersType==='SELL_ORDER'?'text_red submit-sell-cancel':'text_green submit-btn-cancel'" @click="closeCancelBox">取消</div>
+          <div class="submit-btn border_radius" :class="itemContainer.postersType==='SELL'?'text_red submit-sell-cancel':'text_green submit-btn-cancel'" @click="closeCancelBox">取消</div>
 
-          <div class="submit-btn border_radius text_white" :class="itemContainer.postersType==='SELL_ORDER'?'submit-sell-confirm':'submit-btn-confirm'" @click="submitCancelPosterOrder()">{{ajaxFlag===true?'撤单中':'确定撤单'}}</div>
+          <div class="submit-btn border_radius text_white" :class="itemContainer.postersType==='SELL'?'submit-sell-confirm':'submit-btn-confirm'" @click="submitCancelPosterOrder()">{{ajaxFlag===true?'撤单中':'确定撤单'}}</div>
         </div>
       </div>
     </div>
