--- a/src/components/OrderConduct/OrderConduct.html
+++ b/src/components/OrderConduct/OrderConduct.html
@@ -35,16 +35,16 @@
           <div class="numbers">
             {{item.orderId}}
           </div>
-          <div class="type" :class="item.type == 'SELL_ORDER' ? 'sell' : 'buy'">
-            {{item.type == 'SELL_ORDER' ? '卖出' : '买入'}}
+          <div class="type" :class="item.type == 'SELL' ? 'sell' : 'buy'">
+            {{item.type == 'SELL' ? '卖出' : '买入'}}
           </div>
-          <div class="price" :class="item.type == 'SELL_ORDER' ? 'sell' : 'buy'">
+          <div class="price" :class="item.type == 'SELL' ? 'sell' : 'buy'">
             {{$globalFunc.accFixed(item.price,2)}}
           </div>
           <div class="amount">
             {{$globalFunc.accFixed(item.amount,2)}}
           </div>
-          <div class="money" :class="item.type == 'SELL_ORDER' ? 'sell' : 'buy'">
+          <div class="money" :class="item.type == 'SELL' ? 'sell' : 'buy'">
             {{$globalFunc.accFixed(item.amount * item.price,2)}}
           </div>
           <!-- UNCONFIRMED, // 未确认
@@ -62,7 +62,7 @@
           </div>
           </div>
         <div class="cannel_time">
-          <button class="cannel_time_btn border_radius" v-if="item.type == 'SELL_ORDER' && (item.confirmStatus == 'UNCONFIRMED' || item.confirmStatus == 'BUYER_CONFIRM')" @click="COMFIRM_BTN(item)">
+          <button class="cannel_time_btn border_radius" v-if="item.type == 'SELL' && (item.confirmStatus == 'UNCONFIRMED' || item.confirmStatus == 'BUYER_CONFIRM')" @click="COMFIRM_BTN(item)">
             确认已收款
           </button>
           <button class="cannel_time_btn border_radius" v-if="item.type == 'BUY' && item.confirmStatus == 'UNCONFIRMED'" @click="COMFIRM_BTN(item)">
@@ -104,7 +104,7 @@
           </div>
           <div class="user_info_item flex">
             <div class="user_info_item_label">类&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;型:</div>
-            <div class="user_info_item_detail">{{order_detail.type == 'SELL_ORDER' ? '卖出' : '买入'}}</div>
+            <div class="user_info_item_detail">{{order_detail.type == 'SELL' ? '卖出' : '买入'}}</div>
           </div>
           <div class="user_info_item flex">
             <div class="user_info_item_label">价&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;格:</div>
@@ -119,7 +119,7 @@
             <div class="user_info_item_detail">{{$globalFunc.accFixed(order_detail.amount * order_detail.price,2)}} CNY</div>
           </div>
           <div class="user_info_item flex">
-            <div class="user_info_item_label">{{order_detail.type == 'SELL_ORDER' ? '卖家姓名' : '卖家姓名'}}：</div>
+            <div class="user_info_item_label">{{order_detail.type == 'SELL' ? '卖家姓名' : '卖家姓名'}}：</div>
             <div class="user_info_item_detail">{{user_info.name}}</div>
           </div>
         </div>
@@ -147,7 +147,7 @@
           </div>
           <div class="user_info_item flex">
             <div class="user_info_item_label">类&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;型：</div>
-            <div class="user_info_item_detail">{{order_detail.type == 'SELL_ORDER' ? '卖出' : '买入'}}</div>
+            <div class="user_info_item_detail">{{order_detail.type == 'SELL' ? '卖出' : '买入'}}</div>
           </div>
           <div class="user_info_item flex">
             <div class="user_info_item_label">价&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;格：</div>
@@ -162,7 +162,7 @@
             <div class="user_info_item_detail">{{$globalFunc.accFixed(order_detail.amount * order_detail.price,2)}} CNY</div>
           </div>
           <div class="user_info_item flex">
-            <div class="user_info_item_label">{{order_detail.type == 'SELL_ORDER' ? '买家姓名' : '卖家姓名'}}：</div>
+            <div class="user_info_item_label">{{order_detail.type == 'SELL' ? '买家姓名' : '卖家姓名'}}：</div>
             <div class="user_info_item_detail">{{user_info.name}}</div>
           </div>
         </div>
