--- a/src/components/OrderOther/OrderOther.html
+++ b/src/components/OrderOther/OrderOther.html
@@ -30,19 +30,19 @@
         <div class="numbers">
           {{item.orderId}}
         </div>
-          <div class="type" :class="item.type == 'SELL_ORDER' ? 'sell' : 'buy'">
-              {{item.type == 'SELL_ORDER' ? '卖出' : '买入'}}
+          <div class="type" :class="item.type == 'SELL' ? 'sell' : 'buy'">
+              {{item.type == 'SELL' ? '卖出' : '买入'}}
           </div>
-        <div class="price" :class="item.type == 'SELL_ORDER' ? 'sell' : 'buy'">
+        <div class="price" :class="item.type == 'SELL' ? 'sell' : 'buy'">
           {{$globalFunc.accFixed(item.price,2)}}
         </div>
         <div class="amount">
           {{$globalFunc.accFixed(item.amount,2)}}
         </div>
-        <div class="money" :class="item.type == 'SELL_ORDER' ? 'sell' : 'buy'">
+        <div class="money" :class="item.type == 'SELL' ? 'sell' : 'buy'">
           {{$globalFunc.accFixed(item.amount * item.price,2)}}
         </div>
-        <div class="cannel_time" :class="item.type == 'SELL_ORDER' ? 'sell' : 'buy'">
+        <div class="cannel_time" :class="item.type == 'SELL' ? 'sell' : 'buy'">
           <span v-if="item.orderStatus == 'EXPIRE1'">确认付款超时</span>
           <span v-if="item.orderStatus == 'EXPIRE2'">确认收款超时</span>
           <span v-if="item.orderStatus == 'ABNORMAL'">订单异常</span>
