修改商家已完成已撤销订单样式

--- a/src/components/BusinessOrderCannel/BusinessOrderCannel.html
+++ b/src/components/BusinessOrderCannel/BusinessOrderCannel.html
@@ -19,7 +19,7 @@
 			<!-- table tbody start -->
 			<div class="business_order_table_tbody text_block">
 				<Loading v-if="loading" />
-				<div class="business_order_table_tr flex-center text_dark" v-else v-for="(item,index) in pageList" :key="index">
+				<div class="business_order_table_tr flex-center" v-else v-for="(item,index) in pageList" :key="index">
 <!--					<div class="order">{{item.id}}</div>-->
 					<div class="type" >&nbsp;{{item.id}}</div>
           <div class="orderstatus" :class="item.postersType === 'BUY_ORDER' ? 'text_green' : 'text_red'">{{item.postersType === 'BUY_ORDER' ? '购买' : '出售'}}</div>
@@ -27,7 +27,7 @@
 					<div class="amount">{{toFixed(item.total,2)}}</div>
 					<div class="money">{{toFixed(accMul(item.total,item.price),2)}}</div>
 <!--					<div class="clock">{{item.postersType === 'BUY_ORDER'?'0.00':toFixed(item.locking,2)}}</div>-->
-          <div class="jyobject"></div>
+          <div class="jyobject">李四</div>
 <!--					<div class="complete">{{toFixed(item.deal,2)}}</div>-->
 <!--					<div class="create">{{formatDateUitl(item.createdAt)}}</div>-->
 					<div class="update">{{formatDateUitl(item.cancelTime)}}</div>
