银行卡列表调试接口

--- a/src/components/PaymentSet/PaymentSe.html
+++ b/src/components/PaymentSet/PaymentSe.html
@@ -454,7 +454,7 @@
           <div class="input-item-container">
             <div class="input-item-title ">开户行</div>
             <div class="input-item-input-container">
-              <!--<input type="text" placeholder="选择" class="input-item-input input_padding input_border border_radius">-->
+              <!--              <input type="text" placeholder="选择" class="input-item-input input_padding input_border border_radius">-->
               <v-select v-model="bankName" :label="selectBankName" :options="bankSelectList"
                         :disabled="!bankSelectListReady"
                         :class="{'wrong-msg-border':bankNameWrong}"
@@ -466,11 +466,11 @@
 
             <!--开户行错误提示 begin-->
             <div class="input-item-container-wrong wrong-msg-container flex" v-if="bankNameWrong">
-<<<<<<< HEAD
-              <!--              <div class="input-item-title"></div>-->
-=======
-<!--              <div class="input-item-title"></div>-->
->>>>>>> 4f6ef3031b5d244118dbd3ea77d3f01b0185bbc0
+              <!--<<<<<<< HEAD-->
+              <!--              &lt;!&ndash;              <div class="input-item-title"></div>&ndash;&gt;-->
+              <!--=======-->
+              <!--&lt;!&ndash;              <div class="input-item-title"></div>&ndash;&gt;-->
+              <!--&gt;>>>>>> 4f6ef3031b5d244118dbd3ea77d3f01b0185bbc0-->
               <div class="input-item-input-container ">
                 {{bankNameWrong}}
               </div>
@@ -492,11 +492,11 @@
             </div>
             <!--开户支行错误提示 begin-->
             <div class="input-item-container-wrong wrong-msg-container flex" v-if="bankBranchNameWrong">
-<<<<<<< HEAD
-              <!--              <div class="input-item-title"></div>-->
-=======
-<!--              <div class="input-item-title"></div>-->
->>>>>>> 4f6ef3031b5d244118dbd3ea77d3f01b0185bbc0
+              <!--<<<<<<< HEAD-->
+              <!--              &lt;!&ndash;              <div class="input-item-title"></div>&ndash;&gt;-->
+              <!--=======-->
+              <!--&lt;!&ndash;              <div class="input-item-title"></div>&ndash;&gt;-->
+              <!--&gt;>>>>>> 4f6ef3031b5d244118dbd3ea77d3f01b0185bbc0-->
               <div class="input-item-input-container ">
                 {{bankBranchNameWrong}}
               </div>
@@ -528,11 +528,11 @@
 
           <!--默认收款银行卡 begin-->
           <div class=" input-item-container-default-bank-card flex">
-<<<<<<< HEAD
-            <!--            <div class="input-item-title"></div>-->
-=======
-<!--            <div class="input-item-title"></div>-->
->>>>>>> 4f6ef3031b5d244118dbd3ea77d3f01b0185bbc0
+            <!--<<<<<<< HEAD-->
+            <!--            &lt;!&ndash;            <div class="input-item-title"></div>&ndash;&gt;-->
+            <!--=======-->
+            <!--&lt;!&ndash;            <div class="input-item-title"></div>&ndash;&gt;-->
+            <!--&gt;>>>>>> 4f6ef3031b5d244118dbd3ea77d3f01b0185bbc0-->
             <div class="flex">
               <!--<input type="text" placeholder="请输入银行卡号" class="input-item-input input_padding input_border border_radius">-->
               <span @click="addChoseDefaultBank" class="pointer text_blue input-item-default-bank-card-radio-container">
