修改认证状态相关和商家中心挂单代码

--- a/src/components/BusinessCenter/BusinessCenter.html
+++ b/src/components/BusinessCenter/BusinessCenter.html
@@ -78,7 +78,7 @@
 <!--              <span class="business-header-item-checkbox-item-text">支付宝</span>-->
 <!--            </div>-->
             <!--银行卡-->
-            <div v-if="bankPay" class="business-header-item-checkbox-item" @click="changeBuyCheckboxBankPay">
+            <div class="business-header-item-checkbox-item" @click="changeBuyCheckboxBankPay">
 <!--              <BaseSimpleRadio :select="buyCheckboxBankPay"></BaseSimpleRadio>-->
               <span class="business-header-item-checkbox-item-text">银行卡</span>
             </div>
@@ -170,7 +170,7 @@
 <!--              <span class="business-header-item-checkbox-item-text">支付宝</span>-->
 <!--            </div>-->
             <!--银行卡-->
-            <div v-if="bankPay" class="business-header-item-checkbox-item" @click="changeSellCheckboxBankPay">
+            <div class="business-header-item-checkbox-item" @click="changeSellCheckboxBankPay">
 <!--              <BaseSimpleRadio :select="sellCheckboxBankPay"></BaseSimpleRadio>-->
               <span class="business-header-item-checkbox-item-text">银行卡</span>
             </div>
