--- a/src/components/BusinessCenter/BusinessCenter.css
+++ b/src/components/BusinessCenter/BusinessCenter.css
@@ -153,16 +153,15 @@
   display: flex;
   justify-content: flex-start;
   align-items: center;
-  margin-right: 10px;
-  cursor: pointer;
+  /*margin-right: 10px;*/
+  /*cursor: pointer;*/
 }
 
 .business-header-item-checkbox-item-text {
-  margin-left: 5px;
-  opacity: 0.5;
+  /*margin-left: 5px;*/
   font-family: PingFangSC-Regular;
-  font-size: 16px;
-  color: #000000;
+  font-size: 14px;
+  color: #6B7DA2;
 }
 .text_light_dark{
   /*opacity: 0.5;*/
