--- a/src/components/OrderComplete/OrderComplete.html
+++ b/src/components/OrderComplete/OrderComplete.html
@@ -30,7 +30,8 @@
       <Loading v-if="loading" />
       <div class="order_conduct_content border_bottom flex-center" v-else v-for="(item, i) in list" @click="GO_DETAIL(item.id, item.type)">
         <div class="numbers">
-          {{item.orderId}}
+      <!-- {{item.orderId}}-->
+          {{item.orderNo}}
         </div>
        <div  class="type" :class="item.type == 'SELL' ? 'sell' : 'buy'">
         {{item.type == 'SELL' ? '卖出' : '买入'}}
@@ -61,7 +62,7 @@
           {{$globalFunc.formatDateUitl(item.createdAt, 'YYYY-MM-DD hh:mm:ss')}}
         </div> -->
         <div class="cannel_time">
-          {{!!item.confirmTime ? $globalFunc.formatDateUitl(item.confirmTime, 'YYYY-MM-DD hh:mm:ss') : ''}}
+          {{!!item.updatedAt ? $globalFunc.formatDateUitl(item.updatedAt, 'YYYY-MM-DD hh:mm:ss') : ''}}
         </div>
       </div>
     </div>
