--- a/src/components/OrderConduct/OrderConduct.html
+++ b/src/components/OrderConduct/OrderConduct.html
@@ -33,7 +33,7 @@
       <div class="order_conduct_content border_bottom flex-center" v-else v-for="(item, i) in list">
         <div class="order_conduct_list flex-center" @click="GO_DETAIL(item.id, item.type)">
           <div class="numbers">
-            {{item.orderId}}
+            {{item.orderNo}}
           </div>
           <div class="type" :class="item.type == 'SELL' ? 'sell' : 'buy'">
             {{item.type == 'SELL' ? '卖出' : '买入'}}
@@ -52,10 +52,15 @@
                     SELLER_CONFIRM, // 卖方确认
                     SELLER_ONCE_CONFIRM // 在买方未确认情况下的卖方确认 -->
           <div class="status">
-            <span v-if="item.confirmStatus == 'UNCONFIRMED'">未确认</span>
-            <span v-if="item.confirmStatus == 'BUYER_CONFIRM'">买方确认</span>
-            <span v-if="item.confirmStatus == 'SELLER_CONFIRM'">卖方确认</span>
-            <span v-if="item.confirmStatus == 'SELLER_ONCE_CONFIRM'">未确认</span>
+<!--            <span v-if="item.confirmStatus == 'UNCONFIRMED'">未确认</span>-->
+<!--            <span v-if="item.confirmStatus == 'BUYER_CONFIRM'">买方确认</span>-->
+<!--            <span v-if="item.confirmStatus == 'SELLER_CONFIRM'">卖方确认</span>-->
+<!--            <span v-if="item.confirmStatus == 'SELLER_ONCE_CONFIRM'">未确认</span>-->
+
+            <span v-if="item.status == 1">待支付</span>
+            <span v-if="item.status == 2">已支付</span>
+            <span v-if="item.status == 3">已完成</span>
+            <span v-if="item.status == 4">已取消</span>
           </div>
           <div class="create_time">
             {{$globalFunc.formatDateUitl(item.createdAt, 'YYYY-MM-DD hh:mm:ss')}}
