--- a/src/components/PaymentSet/PaymentSe.html
+++ b/src/components/PaymentSet/PaymentSe.html
@@ -1,11 +1,11 @@
-<div :class="removeDefaultBankCardList.length == 0 ? 'paymentSe':'paymentSet'">
+<div :class="bankList.length == 0 ? 'paymentSe':'paymentSet'">
   <Loading v-if="loading"/>
   <template v-else>
     <!--收款账户 title begin-->
     <div class="title flex">
       <!--      <span class="title-block"></span>-->
       <span>收款账户</span>
-      <span class="title-describe">请务必使用您本人的实名账户</span>
+      <span class="title-describe">仅支持本人实名账户收款</span>
     </div>
     <!--收款账户 title end-->
 
@@ -73,41 +73,43 @@
       <!--银行转账 内容 begin-->
       <ul class="bank-content-container">
         <!--列表 begin-->
-        <li class="bank-content-row" v-for="row in bankRow">
+        <li class="bank-content-row" v-for="row in bankList">
           <!--银行卡 item begin-->
-          <div class="bank-item-container " v-for="i in 3">
+          <div class="bank-item-container ">
             <!--银行卡 begin-->
-            <div class="bank-item-container" v-if="removeDefaultBankCardList[(row-1)*3+i-1]">
+            <div class="bank-item-container">
               <div class="bank-label">
                 <!--                bank-label-blue-->
                 <!--                :class="{'bank-label-blue':removeDefaultBankCardList[(row-1)*3+i-1].bankStyle==1,'bank-label-green':removeDefaultBankCardList[(row-1)*3+i-1].bankStyle==2,'bank-label-yellow':removeDefaultBankCardList[(row-1)*3+i-1].bankStyle==3}"-->
                 <div class="bank-label-title flex">
                   <!--银行logo-->
                   <div class="bank-logo-icon-container">
+
+                    <div class="bank-card-show">银行卡</div>
                     <!--                    <img :src="'https://logo.btcdo.com/'+removeDefaultBankCardList[(row-1)*3+i-1].bankICO+'.png'" alt=""-->
                     <!--                         class="bank-logo-icon"> -->
-                    <img src="../../assets/China.png" alt="" class="bank-logo-icon">
+<!--                    <img src="../../assets/China.png" alt="" class="bank-logo-icon">-->
                   </div>
 
                   <div class="bank-info flex">
                     <div class="bank-info-info flex">
                       <div class="bank-card-name">
-                        姜楠
+                        {{row.userName}}
                       </div>
                       <!--银行卡号-->
                       <div class="bank-label-card-number">
-                        {{changeBankCard(removeDefaultBankCardList[(row-1)*3+i-1].cardNumber)}}
+                        {{changeBankCard(row.bankNumber)}}
                       </div>
                       ，
                       <!--银行信息-->
                       <div class="bank-label-name-container">
-                        <div class="bank-label-ch-name">{{removeDefaultBankCardList[(row-1)*3+i-1].bankNameCN}}</div>
+                        <div class="bank-label-ch-name">{{row.bankName}}</div>
                         <!--                      <div class="bank-label-en-name">{{removeDefaultBankCardList[(row-1)*3+i-1].bankNameEN}}</div>-->
                       </div>
                       ，
-                      <!--银行信息-->
+                      <!--支行信息-->
                       <div class="bank-label-name-container">
-                        <div class="bank-label-ch-name">北京支行</div>
+                        <div class="bank-label-ch-name">{{row.bankAddress}}</div>
                         <!--                      <div class="bank-label-en-name">{{removeDefaultBankCardList[(row-1)*3+i-1].bankNameEN}}</div>-->
                       </div>
                     </div>
@@ -116,17 +118,17 @@
                     <div class="bank-operation-container flex">
                       <div class="operate-bank-card flex">
                         <div class="change-txt bank-change-txt"
-                             @click="clickModifyBankPay(removeDefaultBankCardList[(row-1)*3+i-1])">修改
+                             @click="clickModifyBankPay(row)">修改
                         </div>
                         <div class="release-txt bank-release-txt"
-                             @click="clickReleaseBank(removeDefaultBankCardList[(row-1)*3+i-1])">解绑
+                             @click="clickReleaseBank(row)">解绑
                         </div>
                       </div>
                       <div class="chose-default-bank-card flex pointer"
-                           @click="clickToChoseDefaultBank(removeDefaultBankCardList[(row-1)*3+i-1])">
+                           @click="clickToChoseDefaultBank(row)">
                         <Radio class="chose-default-bank-card-radio"
-                               :select="defaultBankId===removeDefaultBankCardList[(row-1)*3+i-1].id"
-                               @click="clickToChoseDefaultBank(removeDefaultBankCardList[(row-1)*3+i-1])"
+                               :select="defaultBankId===row.id"
+                               @click="clickToChoseDefaultBank(row)"
                         />
                         <span class="">默认银行卡</span>
                       </div>
@@ -146,41 +148,39 @@
         <!--默认行 begin-->
         <li class="bank-default-row bank-content-row flex">
           <!--默认银行卡 begin-->
-          <div class="bank-default-item bank-item-container" v-if="defaultBankId">
-            <div class="bank-label bank-label-blue"
-                 :class="{'bank-label-blue':defaultBank.bankStyle==1,'bank-label-green':defaultBank.bankStyle==2,'bank-label-yellow':defaultBank.bankStyle==3}"
-            >
-              <div class="bank-label-title flex">
-                <div class="bank-logo-icon-container flex-center">
-                  <img src="" alt="" class="bank-logo-icon">
-                  <!--<img src="./assets/bank-logo-1.png" alt="" class="bank-logo-icon">-->
-                </div>
-                <div class="bank-label-name-container flex">
-                  <div class="bank-label-ch-name">{{defaultBank.bankNameCN}}</div>
-                  <!--                  <div class="bank-label-en-name">{{defaultBank.bankNameEN}}</div>-->
-                </div>
-              </div>
-              <div class="bank-label-card-number strong">
-                {{changeBankCard(defaultBank.cardNumber)}}
-              </div>
-            </div>
-            <div class="bank-operation-container flex">
-              <!--默认银行卡-->
-              <div class="chose-default-bank-card pointer">
-                <Radio class="chose-default-bank-card-radio" :select="defaultBankId==defaultBank.id"/>
-                <span class="strong">默认银行卡</span>
-              </div>
-              <!--解绑、修改按钮-->
-              <div class="operate-bank-card">
-                <div class="release-txt bank-release-txt" @click="clickReleaseBank(defaultBank)">解绑</div>
-                <div class="change-txt bank-change-txt" @click="clickModifyBankPay(defaultBank)">修改</div>
-              </div>
-            </div>
-          </div>
+<!--          <div class="bank-default-item bank-item-container" v-if="defaultBankId">-->
+<!--            <div class="bank-label bank-label-blue">-->
+<!--              <div class="bank-label-title flex">-->
+<!--                <div class="bank-logo-icon-container flex-center">-->
+<!--                  <img src="" alt="" class="bank-logo-icon">-->
+<!--                  &lt;!&ndash;<img src="./assets/bank-logo-1.png" alt="" class="bank-logo-icon">&ndash;&gt;-->
+<!--                </div>-->
+<!--                <div class="bank-label-name-container flex">-->
+<!--                  <div class="bank-label-ch-name">{{defaultBank.bankName}}</div>-->
+<!--                  &lt;!&ndash;                  <div class="bank-label-en-name">{{defaultBank.bankNameEN}}</div>&ndash;&gt;-->
+<!--                </div>-->
+<!--              </div>-->
+<!--              <div class="bank-label-card-number strong">-->
+<!--                {{changeBankCard(defaultBank.bankNumber)}}-->
+<!--              </div>-->
+<!--            </div>-->
+<!--            <div class="bank-operation-container flex">-->
+<!--              &lt;!&ndash;默认银行卡&ndash;&gt;-->
+<!--              <div class="chose-default-bank-card pointer">-->
+<!--                <Radio class="chose-default-bank-card-radio" :select="defaultBankId == defaultBank.id"/>-->
+<!--                <span class="strong">默认银行卡</span>-->
+<!--              </div>-->
+<!--              &lt;!&ndash;解绑、修改按钮&ndash;&gt;-->
+<!--              <div class="operate-bank-card">-->
+<!--                <div class="release-txt bank-release-txt" @click="clickReleaseBank(defaultBank)">解绑</div>-->
+<!--                <div class="change-txt bank-change-txt" @click="clickModifyBankPay(defaultBank)">修改</div>-->
+<!--              </div>-->
+<!--            </div>-->
+<!--          </div>-->
           <!--默认银行卡 end-->
 
           <!--添加银行卡 begin-->
-          <div class="add-new-bank-card-item flex" v-if="removeDefaultBankCardList.length !=0">
+          <div class="add-new-bank-card-item flex" v-if="bankList.length != 0">
             <div class="add-new-bank-card-label flex pointer" @click="clickAddBankPay">
               <div class="add-new-bank-card-img"></div>
               <div class="add-new-bank-card">请添加银行卡</div>
@@ -189,7 +189,7 @@
           <!--添加银行卡 end-->
 
           <!--添加银行卡 begin-->
-          <div class="add-new-bank-card-label-no" v-if="removeDefaultBankCardList.length == 0">
+          <div class="add-new-bank-card-label-no" v-if="bankList.length == 0">
             <div class="no-bank-list">
               <img src="./assets/no_bank_list.png" alt="">
               <p>暂无收款银行卡</p>
@@ -432,10 +432,11 @@
             <div class="input-item-title">账户名</div>
             <div class="input-item-input-container">
               <input type="text" placeholder="请输入您的姓名"
-                     class="input-item-input input_padding input_border border_radius"
+                     class="input-item-input input_padding input_border border_radius input-account"
                      v-model="bankAccount"
                      :class="{'wrong-msg-border':bankAccountWrong}"
                      @blur="testBankAccount"
+                     readonly
               >
             </div>
 
@@ -527,12 +528,13 @@
           <!--银行卡号 end-->
 
           <!--默认收款银行卡 begin-->
-          <div class=" input-item-container-default-bank-card flex">
+          <div class=" input-item-container-default-bank-card flex" v-if="bankType==0">
             <!--<<<<<<< HEAD-->
             <!--            &lt;!&ndash;            <div class="input-item-title"></div>&ndash;&gt;-->
             <!--=======-->
             <!--&lt;!&ndash;            <div class="input-item-title"></div>&ndash;&gt;-->
             <!--&gt;>>>>>> 4f6ef3031b5d244118dbd3ea77d3f01b0185bbc0-->
+<!--            如果是第一次绑定一行卡 不显示-->
             <div class="flex">
               <!--<input type="text" placeholder="请输入银行卡号" class="input-item-input input_padding input_border border_radius">-->
               <span @click="addChoseDefaultBank" class="pointer text_blue input-item-default-bank-card-radio-container">
@@ -646,7 +648,7 @@
           <!--银行卡号 end-->
 
           <!--默认收款银行卡 begin-->
-          <div class="input-item-container-two flex">
+          <div class="input-item-container-two flex" v-if="bankDefault">
             <!--            <div class="input-item-conform-title"></div>-->
             <div>已设为默认银行卡</div>
             <div class="img-item-input-confirm-container">
@@ -739,11 +741,14 @@
 
     <!--确认删除银行卡 begin-->
     <PopupWindow :open="confirmDeleteBank" :close="closeConfirmDeleteBank" :headerBorder="false">
-      <div slot="header" class="delete-header">
-        是否解绑
+      <div slot="header" class="delete-header flex">
+        <div>是否解绑</div>
+        <div class="bind-bank-close pointer" @click="closeConfirmDeleteBank">
+          <img src="./assets/cancel.png" alt="">
+        </div>
       </div>
-      <div slot="article">
-        <div class="delete-row delete-bank-row flex">
+      <div slot="article" class="detele-bank-info">
+        <div class="delete-bank-row flex">
           <div class="delete-title delete-bank-title">银行：</div>
           <div class="delete-detail delete-bank-detail">{{deleteBankName}}</div>
         </div>
@@ -761,7 +766,7 @@
           <button class="btn_white_blue text_blue aLiPay-btn pointer" @click="closeConfirmDeleteBank">
             取消
           </button>
-          <button class="btn_blue  text_white aLiPay-btn aLiPay-commit-btn pointer"
+          <button class="text_white aLiPay-btn aLiPay-commit-btn pointer"
                   @click="confirmReleaseBank">
             确定解绑
           </button>
@@ -792,14 +797,13 @@
         </div>
         <div slot="article" class="verify-article">
           <!--选择 begin-->
-          <div class="flex unit-input-container pick-one-type verify-row" v-if="showPicked">
+          <div class="flex unit-input-container pick-one-type" >
             <div>
               <input type="radio" class="pointer" name="identify-type" id="ga" value="bindGA" v-model="picked">
               <label for="ga" class="pointer">谷歌验证</label>
             </div>
             <div>
-              <input type="radio" class="pointer" name="identify-type" id="bindMobile" value="bindMobile"
-                     v-model="picked">
+              <input type="radio" class="pointer" name="identify-type" id="bindMobile" value="bindMobile" v-model="picked">
               <label for="bindMobile" class="pointer">手机验证</label>
             </div>
           </div>
@@ -807,17 +811,22 @@
 
           <!--谷歌验证码 begin-->
           <template v-if="picked==='bindGA'">
-            <div class="flex unit-input-container container-ga verify-row"
-                 :class="{'wrong-msg':GACodeWA!==''}"
-            >
-            <span class="flex-center unit-input-container-title">
-              <img src="./assets/谷歌验证码.png" alt="">
-            </span>
+            <div class="ga-code-title">谷歌验证码</div>
+            <div class="flex unit-input-container verify-row"
+                 :class="{'wrong-msg':GACodeWA !==''}">
+<!--              <span class=" unit-input-container-title">-->
+<!--                <img src="./assets/谷歌验证码.png" alt="">-->
+<!--              </span>-->
               <input type="text" placeholder='请输入验证码' class="unit-input input-ga"
                      v-model="GACode" @blur="testGACode">
+<!--              <span class="get-ga-code pointer" v-if="!getVerificationCode" @click="click_getVerificationCode">-->
+<!--                获取验证码</span>-->
+<!--              <span class=" identifying-code-button-close identifying-code-button"-->
+<!--                    v-if="getVerificationCode">{{getVerificationCodeCountdown}}s后可再次发送</span>-->
+
             </div>
             <div class="unit-input-interval txt-red">
-              <span v-if="GACodeWA!==''">{{GACodeWA}}</span>
+              <span v-if="GACodeWA !==''">{{GACodeWA}}</span>
             </div>
           </template>
           <!--谷歌验证码 end-->
