修改商家中心

--- a/src/components/BusinessCenter/BusinessCenter.html
+++ b/src/components/BusinessCenter/BusinessCenter.html
@@ -349,7 +349,7 @@
           <div class="submit-buy-item-left text_grey_8 strong">支付方式：</div>
           <div class="submit-buy-item-right">
 <!--            <img class="submit-buy-item-right-img-zfb" src="../../assets/c2c_center_buy/bank_icon.png" alt="">-->
-            {{bankName}}
+            {{bankName}}银行卡bankName
             <span class="text_red">（须本人账户支付）</span>
           </div>
         </div>
